# MediaManager-Rust

Medman Project - Rust/: Cargo.toml  README.adoc  README.md  scan.json  search.md  splaylist.m3u
Medman Project - Rust/src/: cli.rs  error.rs  lib.rs  main.rs  musicfile.rs  scan.rs  search.rs  write2.rs
