[package]
name = "medman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
id3 = "0.6.6"
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"] }
m3u = "1.0.0"
time = "0.2.6"
immeta = "0.4"